--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ethersproject/providers": "^5.3.0",
+    "@ethersproject/units": "^5.3.0",
     "@material-ui/core": "^4.11.4",
     "@react-three/drei": "^7.3.1",
     "@react-three/fiber": "^7.0.6",
@@ -14,15 +16,18 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
-    "@types/three": "^0.131.0",
+    "@types/three": "^0.130.0",
+    "clsx": "^1.1.1",
     "dotenv": "^8.2.0",
-    "ethers": "^5.4.5",
+    "ethers": "^5.4.4",
     "react": "^17.0.2",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "sass": "^1.35.2",
-    "three": "^0.132.0",
-    "three.js": "^0.77.1",
+    "styled-components": "^5.3.0",
+    "three": "^0.131.3",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1",
     "web3": "^1.5.2"
@@ -52,5 +57,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.28.3",
+    "@typescript-eslint/parser": "^4.28.3",
+    "eslint": "^7.30.0",
+    "eslint-plugin-react": "^7.24.0"
   }
 }
