Add title and descirption

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Nifty.rip",
+  "name": "NFTs forever lost to the ether",
   "icons": [
     {
       "src": "favicon.ico",
