--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@ethersproject/providers": "^5.3.0",
     "@ethersproject/units": "^5.3.0",
     "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
     "@react-three/drei": "^7.3.1",
     "@react-three/fiber": "^7.0.6",
     "@testing-library/jest-dom": "^5.11.4",
@@ -21,9 +22,9 @@
     "dotenv": "^8.2.0",
     "ethers": "^5.4.4",
     "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "sass": "^1.35.2",
     "styled-components": "^5.3.0",
