--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Nifty.rip",
-  "name": "NFTs forever lost to the ether",
+  "short_name": "My Nifty Gallery",
+  "name": "View your NFTs in this unique 3D gallery",
   "icons": [
     {
       "src": "favicon.ico",
