--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
     "@types/three": "^0.130.0",
+    "@web3-react/core": "latest",
+    "@web3-react/injected-connector": "latest",
+    "@web3-react/walletconnect-connector": "latest",
     "clsx": "^1.1.1",
     "dotenv": "^8.2.0",
     "ethers": "^5.4.4",
