--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
     "@types/three": "^0.130.0",
+    "@unegma/shapes": "^1.0.1",
     "@web3-react/core": "latest",
     "@web3-react/injected-connector": "latest",
     "@web3-react/walletconnect-connector": "latest",
