--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "dependencies": {
     "@ethersproject/providers": "^5.3.0",
     "@ethersproject/units": "^5.3.0",
-    "@material-ui/core": "^4.11.4",
-    "@material-ui/icons": "^4.11.2",
+    "@mui/icons-material": "^5.2.0",
+    "@mui/material": "^5.2.1",
     "@react-three/drei": "^7.3.1",
     "@react-three/fiber": "^7.0.6",
     "@react-three/xr": "^3.1.2",
